package SpabDataStruct;
syntax = "proto3";

message Log {
    double id = 1;
    double timestamp = 2;
    string type = 4;
    bytes data = 5;
}

message CameraData {
    string name = 1;
    bytes buf = 2;
}
message SensorData {
    double voltage = 1;
}

